--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,5 @@
-DirectoryIndex home.html index.html index.htm index.php
+<IfModule dir_module>
+ DirectoryIndex home.html home.php index.html index.php
+ RewriteCond %{THE_REQUEST} ^[A-Z]{3,9}\ /index\.(html|htm|php|php3|php5|shtml|phtml) [NC]
+ RewriteRule ^index\.html|htm|php|php3|php5|shtml|phtml$ / [R=301,L]
+</IfModule>
